--- a/index.html
+++ b/index.html
@@ -36,5 +36,62 @@
   const canvas = document.getElementById("canvas");
   const ctx = canvas.getContext("2d");
 
-  function
+  function drawAxes() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+    const w = canvas.width;
+    const h = canvas.height;
+
+    // Midpoints
+    const midX = w / 2;
+    const midY = h / 2;
+
+    // Draw axes
+    ctx.strokeStyle = "#000";
+    ctx.lineWidth = 2;
+
+    // X-axis
+    ctx.beginPath();
+    ctx.moveTo(0, midY);
+    ctx.lineTo(w, midY);
+    ctx.stroke();
+
+    // Y-axis
+    ctx.beginPath();
+    ctx.moveTo(midX, 0);
+    ctx.lineTo(midX, h);
+    ctx.stroke();
+
+    // Labels
+    ctx.font = "16px sans-serif";
+    ctx.fillStyle = "#000";
+
+    // X-axis labels
+    ctx.fillText("Techno", 10, midY - 10);          // left
+    ctx.fillText("Poetics", w - 70, midY - 10);     // right
+
+    // Y-axis labels
+    ctx.fillText("Local", midX + 10, 20);           // top
+    ctx.fillText("Cosmo", midX + 10, h - 10);       // bottom
+  }
+
+  function plotPoint(x, y) {
+    ctx.fillStyle = "red";
+    ctx.beginPath();
+    ctx.arc(x, y, 5, 0, Math.PI * 2);
+    ctx.fill();
+  }
+
+  canvas.addEventListener("click", (event) => {
+    const rect = canvas.getBoundingClientRect();
+    const x = event.clientX - rect.left;
+    const y = event.clientY - rect.top;
+
+    plotPoint(x, y);
+  });
+
+  drawAxes();
+</script>
+
+</body>
+</html>
