--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     ctx.fillStyle = "#000";
 
     // X-axis labels
-    ctx.fillText("Techno", 10, midY - 10);          // left
+    ctx.fillText("Technos", 10, midY - 10);          // left
     ctx.fillText("Poetics", w - 70, midY - 10);     // right
 
     // Y-axis labels
