--- a/index.html
+++ b/index.html
@@ -1,97 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Transdisciplinary Map</title>
-<style>
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: sans-serif;
-    margin: 40px;
-  }
+  <meta charset="UTF-8" />
+  <title>DeSciWorld Transdisciplinary Mapping</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+      background: #f5f5f7;
+      color: #222;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 24px;
+    }
 
-  #canvas {
-    border: 1px solid #333;
-    background-color: #fafafa;
-  }
+    .container {
+      max-width: 800px;
+      width: 100%;
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      padding: 24px 24px 32px;
+    }
 
-  .label {
-    font-size: 16px;
-    margin: 8px;
-  }
-</style>
+    h1 {
+      margin-top: 0;
+      margin-bottom: 8px;
+      font-size: 1.6rem;
+    }
+
+    p {
+      margin-top: 4px;
+      margin-bottom: 8px;
+      line-height: 1.4;
+    }
+
+    .instructions {
+      font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 16px;
+    }
+
+    canvas {
+      display: block;
+      margin: 16px auto;
+      border-radius: 12px;
+      background: #fafafa;
+      border: 1px solid #ddd;
+    }
+
+    .legend {
+      font-size: 0.9rem;
+      margin-top: 8px;
+      color: #444;
+    }
+
+    .legend p {
+      margin: 2px 0;
+    }
+
+    .hint {
+      margin-top: 12px;
+      font-size: 0.85rem;
+      color: #777;
+    }
+
+    @media (max-width: 700px) {
+      canvas {
+        width: 100%;
+        height: auto;
+      }
+    }
+  </style>
 </head>
-
 <body>
+  <div class="container">
+    <h1>DeSciWorld Transdisciplinary Mapping</h1>
+    <p class="instructions">
+      Click anywhere on the plane to add a labelled point.
+      Click an existing point to rename it or delete it.
+      Drag a point to move it around.
+    </p>
 
-<h2>Transdisciplinary Engagement Map</h2>
+    <!-- 🔹 Our plotting surface -->
+    <canvas id="mapCanvas" width="600" height="600"></canvas>
 
-<div class="label">Click anywhere on the plane to map your position.</div>
+    <div class="legend">
+      <p><strong>X-axis:</strong> Techno ⟶ Poetics</p>
+      <p><strong>Y-axis:</strong> Local ⟶ Cosmo</p>
+    </div>
 
-<canvas id="canvas" width="600" height="600"></canvas>
+    <p class="hint">
+      Tip: To delete a point, click it and type <strong>DELETE</strong> in the prompt.
+    </p>
+  </div>
 
-<script>
-  const canvas = document.getElementById("canvas");
-  const ctx = canvas.getContext("2d");
-
-  function drawAxes() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    const w = canvas.width;
-    const h = canvas.height;
-
-    // Midpoints
-    const midX = w / 2;
-    const midY = h / 2;
-
-    // Draw axes
-    ctx.strokeStyle = "#000";
-    ctx.lineWidth = 2;
-
-    // X-axis
-    ctx.beginPath();
-    ctx.moveTo(0, midY);
-    ctx.lineTo(w, midY);
-    ctx.stroke();
-
-    // Y-axis
-    ctx.beginPath();
-    ctx.moveTo(midX, 0);
-    ctx.lineTo(midX, h);
-    ctx.stroke();
-
-    // Labels
-    ctx.font = "16px sans-serif";
-    ctx.fillStyle = "#000";
-
-    // X-axis labels
-    ctx.fillText("Technos", 10, midY - 10);          // left
-    ctx.fillText("Poetics", w - 70, midY - 10);     // right
-
-    // Y-axis labels
-    ctx.fillText("Local", midX + 10, 20);           // top
-    ctx.fillText("Cosmo", midX + 10, h - 10);       // bottom
-  }
-
-  function plotPoint(x, y) {
-    ctx.fillStyle = "red";
-    ctx.beginPath();
-    ctx.arc(x, y, 5, 0, Math.PI * 2);
-    ctx.fill();
-  }
-
-  canvas.addEventListener("click", (event) => {
-    const rect = canvas.getBoundingClientRect();
-    const x = event.clientX - rect.left;
-    const y = event.clientY - rect.top;
-
-    plotPoint(x, y);
-  });
-
-  drawAxes();
-</script>
-
+  <!-- 🔹 Link to the external JS file -->
+  <script src="script.js"></script>
 </body>
 </html>
